[package]
name = "clipcpy"
version = "0.2.0"
edition = "2021"
authors = ["trasua"]
description = "Copy content from a file to clipboard"
license = "MIT"
rust-version = "1.60"
homepage = "https://github.com/trasua/clipcpy-rs"
repository = "https://github.com/trasua/clipcpy-rs"
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
copypasta = "0.7.1"
copypasta-ext = "0.3.7"
