[package]
name = "luu"
version = "0.1.3"
edition = "2024"
authors = ["macroexpansion"]
description = "Copy content from a file to clipboard"
license = "MIT"
rust-version = "1.88"
homepage = "https://github.com/macroexpansion/luu-rs"
repository = "https://github.com/macroexpansion/luu-rs"
categories = ["command-line-utilities"]
readme = "README.md"

[dependencies]
clap = { version = "3.2.25", features = ["derive"] }
cli-clipboard = "0.4.0"
